# research-paper-review-agent

./: .gitignore  README.md  main.py  package-lock.json  pyproject.toml
config/: keywords.json  keyworks.json  settings-sample.json
docs/: graph_diagram.md  prd.md
research_paper_review_agent/: __init__.py
research_paper_review_agent/core/: __init__.py  agent.py  state.py
research_paper_review_agent/interface/: __init__.py  cli.py  gui.py
research_paper_review_agent/models/: __init__.py  schemas.py
research_paper_review_agent/nodes/: __init__.py  analyzers.py  convert.py  extractors.py  preprocessors.py  summarizers.py  translators.py  validators.py
research_paper_review_agent/services/: __init__.py  config_service.py  llm_service.py
research_paper_review_agent/utils/: __init__.py  exceptions.py  helpers.py  keyword_loader.py  logger.py
