[project]
name = "research-paper-review-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.26.5",
    "pymupdf4llm>=0.0.27",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.7",
    "python-dotenv>=1.1.1",
    "dotenv>=0.9.9",
    "langdetect>=1.0.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
